First end-points documentation
